[package]
name = "extar"
version = "0.1.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
license = "BSD-2-Clause"
description = "Out-of-core tar archive processing."
repository = "https://github.com/peterhj/extar"
keywords = ["archive", "tar"]

[lib]
name = "extar"
path = "src/lib.rs"

[[bin]]
name = "extar-inspect"
path = "tools/extar-inspect.rs"
